[Misc] Use getLast/removeLast JDK 21 methods to simplify BlobPath